# mercado-imobiliario

./: AGENTS.md  PRD.md  TASKS.md  pyproject.toml
notebooks/: extract.ipynb  imoveis_maringa_venda_completo.csv  residencial-venda-maringa.csv
src/: __init__.py
src/extract/: scraper.py
